Final Jannis corrections plus julian corrections

--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -11,21 +11,21 @@
 \label{subsec:crhist}
 \glspl{CR} have been a source of investigation for more than a century now. Even before the balloon flight by Victor Hess, it was Henry Becquerel, the discoverer of radioactivity, who believed that the \textit{atmospheric electricity} (ionization of air) was due to the radioactive substances present on Earth. In such a scenario the ionization rate should decrease the higher up you go in the atmosphere. The first measurements disproving this theory were performed by Theodor Wulf in 1909 with his own developed electrometer. His measurements published in the \textit{Physikalische Zeitschrift} indicated a higher level of radiation at the top of the Eiffel Tower as compared to its base. Unfortunately, the measurements were not widely accepted, and it would take three years till Victor Hess, via his several balloon flights, provided irrefutable measurements corroborating Wulf's observations.
 
-Between 1911 and 1912 Victor Hess performed nine (2 in 1911 and 7 in 1912) balloon flights going as high as 5350 m a.s.l to measure the dependence of ionization rate to altitude. He carried with him three Wulf electrometers, two tuned for $\gamma$ rays and the third tuned for $\beta$ rays~\cite{hess2018observationspenetratingradiationseven} which along with $\alpha$ were the only three known radioactive decays. His measurements published in the Proceedings of the Viennese Academy of Sciences~\cite{Hess:1912srp} showed that the radiation level decreased slightly up to a certain altitude ($\sim$1 km) but after this height, the radiation increased significantly and at the highest flown altitudes reached levels about twice in comparison to the ones at sea level. Some of his measurements were done during the night and one during a partial solar eclipse which further made him rule out the Sun as a source of this radiation. With further confirmations via the measurements by Werner Kolhörster in 1914 and Robert Millikan, in 1925, Victor Hess was awarded the Nobel Prize in Physics in 1936. 
+Between 1911 and 1912 Victor Hess performed nine (2 in 1911 and 7 in 1912) balloon flights going as high as 5350 m a.s.l to measure the dependence of ionization rate to altitude. He carried with him three Wulf electrometers, two tuned for $\gamma$ rays and the third tuned for $\beta$ rays which along with $\alpha$ rays were the only three known radioactive decays. His measurements published in the Proceedings of the Viennese Academy of Sciences~\cite{Hess:1912srp},~\cite{hess2018observationspenetratingradiationseven} showed that the radiation level decreased slightly up to a certain altitude ($\sim$1 km) but after this height, the radiation increased significantly and at the highest flown altitudes reached levels about twice in comparison to the ones at sea level. Some of his measurements were done during the night and one during a partial solar eclipse which further made him rule out the Sun as a source of this radiation. With further confirmations via the measurements by Werner Kolhörster in 1914 and Robert Millikan, in 1925, Victor Hess was awarded the Nobel Prize in Physics in 1936. 
 
-\glspl{CR} were still presumed to be gamma rays. This supposition was quickly negated by the efforts of Jacob Clay, who via his measurements of the \gls{CR} intensity at different latitudes while sailing from Java to the Netherlands in 1927~\cite{Clay:1927I}, showed that the geomagnetic field had a significant effect on the intensity. Further observations of the \textit{East-West} effect, the directional dependent intensity due to the charge of the primary \glspl{CR}, predicted by Bruno Rossi~\cite{PhysRev.36.606}, by various experiments~\cite{PhysRev.43.834}~\cite{PhysRev.43.835} concluded that the intensity was greater from the west, proving that \gls{CR} primaries have a positive charge.
+\glspl{CR} were still presumed to be gamma rays. This supposition was quickly negated by the efforts of Jacob Clay, who via his measurements of the \gls{CR} intensity at different latitudes while sailing from Java to the Netherlands in 1927~\cite{Clay:1927I}, showed that the geomagnetic field had a significant effect on the intensity. Further observations of the \textit{East-West} effect, the directional dependent intensity due to the charge of the primary \glspl{CR} as predicted by Bruno Rossi~\cite{PhysRev.36.606} by various experiments~\cite{PhysRev.43.834}~\cite{PhysRev.43.835} concluded that the intensity was greater from the west, proving that \gls{CR} primaries have a positive charge.
 
-Today we use the term \glspl{CR} to describe the highly energetic charged particles/nuclei travelling at very high speeds through space. The Earth is constantly bombarded by \glspl{CR}, some originating from the Sun but most of them from outside our Solar System. In more than 100 years since Victor Hess's balloon flights, we have gathered a lot more information and have achieved a better understanding of \glspl{CR}. We have detected \glspl{CR} up to energies $\sim 10^{20}$eV~\cite{TA_2023} which is an impressive feat since at these energies the expected flux drops below one particle/$\text{km}^2$ yr. We know a lot more about the composition of the \glspl{CR} and have also proposed models explaining their origin and their journey to Earth. \glspl{CR} continue to be a source of fascination. Some of the achievements are summarized below along with some unanswered questions about \glspl{CR}. 
+Today we use the term \glspl{CR} to describe the highly energetic charged particles travelling at very high speeds through space. The Earth is constantly bombarded by \glspl{CR}, some originating from the Sun but most of them from outside our Solar System. In more than 100 years since Victor Hess's balloon flights, we have gathered a lot more information and have achieved a better understanding of \glspl{CR}. We have detected \glspl{CR} up to energies $\sim 10^{20}$\gls{eV}~\cite{TA_2023} which is an impressive feat since at these energies the expected flux drops below one particle per $\text{km}^2$ yr. We know a lot more about the composition of the \glspl{CR} and have also proposed models explaining their origin and their journey to Earth. \glspl{CR} continue to be a source of fascination. Some of the achievements are summarized below along with some unanswered questions about \glspl{CR}. 
 
 \subsection{Origin}
 \label{subsec:crorig}
-To understand the sources of \glspl{CR} one needs to understand the mechanisms that could impart huge amounts of energies to the tiny particles that actually reach the Earth. We already know that the low energy \glspl{CR} which reach our Earth are predominantly coming from the Sun. The evidence for this comes from the observation of an increase in these with a coincidence to the violent activity of the sun. Most of the \glspl{CR} and \glspl{UHECR}, E > $10^{18}$eV, do not exhibit this temporal coincidence and are thought to have originated in our Galaxy or beyond respectively. Two different mechanisms could explain how the CR particles are accelerated to such high energies over large distances: \textit{bottom-up}~\cite{1984ARA&A..22..425H,Blandford_2000,1993A&A...272..161R} and \textit{top-down}~\cite{Bhattacharjee_2000,Busca_2006}. The \textit{top-down} approach assumes that the \glspl{UHECR} are produced due to the decay or annihilation of extremely massive or exotic particles.
+To understand the sources of \glspl{CR} one needs to understand the mechanisms that could impart huge amounts of energies to the tiny particles that actually reach the Earth. We already know that the low energy \glspl{CR} which reach our Earth are predominantly coming from the Sun. The evidence for this comes from the observation of an increase in these with a coincidence to the violent activity of the sun. Most of the \glspl{CR} and \glspl{UHECR}, E > $10^{18}$eV, do not exhibit this temporal coincidence and are thought to have originated in our Galaxy or beyond respectively. Two different mechanisms could explain how the CR particles obtain such high energies and travel over large distances: \textit{bottom-up}~\cite{1984ARA&A..22..425H,Blandford_2000,1993A&A...272..161R} and \textit{top-down}~\cite{Bhattacharjee_2000,Busca_2006}. The \textit{top-down} approach assumes that the \glspl{UHECR} are produced due to the decay or annihilation of extremely massive or exotic particles.
 Both of these mechanisms have been investigated with various experiments including the Pierre Auger Observatory~\ref{chap:setup}. With the current observations, the top-down models face significant challenges. The extremely high energies required for the annihilation of the hypothesized exotic particles and the lack of evidence for their existence make it very difficult to both verify and rule out the top-down mechanism. The continued improvement in understanding of astroparticle physics and the early universe makes the study of \glspl{UHECR} an exciting and active area for research with the mystery of their origin and propagation still waiting for a solution. 
 
 \begin{figure}[t!]
   \centering
   \includegraphics[width=10.5cm]{thesis_figures/CRnNu/Diffusive-shock-cartoon.pdf}
-  \caption{An illustration to depict the diffusive shock acceleration mechanism and the possible trajectory in the plasma like shock front region. Figure inspired from work by M. Scholer}
+  \caption{An illustration to depict the diffusive shock acceleration mechanism and the possible trajectory in the plasma like shock front region. Figure inspired from work by M. Scholer.}
   \label{fig:Shock_cartoon}
 \end{figure}
 
@@ -85,20 +85,20 @@ The energy cutoff calculated is about 5 x $10^{19}$~\gls{eV} or about 8~joules. 
   \end{split} 
   \qquad
   \begin{split}
-    A + \gamma_{\text{CMB}} &\longrightarrow A-1 + \pi^+ + X \\ 
-                     &\longrightarrow A-1 + \pi^0 + X
+    N + \gamma_{\text{CMB}} &\longrightarrow N' + \pi^{\pm} \\ 
+                     &\longrightarrow N' + \pi^0 \, , 
   \end{split} 
 \end{equation}
-These processes are also called "Photo-pion Production". The thresholds for these reactions or the energy of the photon are of the order of $\sim$a few hundred Megaelectron volt (MeV = $10^6$eV) for protons and a few gigaelectron volt (GeV = $10^9$eV) per nucleon for other nuclei in the rest frame of the proton and nucleon respectively. In the context of the CMB which have an E $\sim 10^{-4}$eV, the predicted cutoff for protons is 50 Exa-electron-volt (EeV = $10^{18}$eV) whereas for heavy nuclei it can range from about 80 EeV to several hundred EeV depending on the mass of the incident nucleus in the lab frame (relevant for astrophysical observations). The mean free path which represents the average distance a \gls{CR} particle can travel before undergoing a significant interaction depends on the initial energy, interaction crossection and the number density of target photons. For a UHE protons interacting with the CMB photon, the mean free path is about $\sim$50-100 Mpc. This leads to the outcome that if a \gls{UHE} proton with energy above the GZK cutoff travels over a distance larger than 50Mpc then such a proton will suffer catastrophic losses and will not be observed in the UHE regime. However, this consequence doesn't hold for heavy nuclei since for similar energies Photo-pion production is not the dominant process via which they can lose energy. For \glspl{UHECR} composed of heavy nuclei (e.g., iron, uranium), the dominant energy loss process during their propagation through the universe is photo-disintegration. It can be described as:
+where N is the nucleon involved in the interaction and N' is the final state nucleon which could be same or different depending on the initial nucleon. These processes are also called "Photo-pion Production". The thresholds for these reactions or the energy of the photon are of the order of $\sim$a few hundred Megaelectron volt (MeV = $10^6$eV) for protons and a few gigaelectron volt (GeV = $10^9$eV) per nucleon for other nuclei in the rest frame of the proton and nucleon respectively. In the context of the CMB which have an E $\sim 10^{-4}$eV, the predicted cutoff for protons is 50 Exa-electron-volt (EeV = $10^{18}$eV) whereas for heavy nuclei it can range from about 80 EeV to several hundred EeV depending on the mass of the incident nucleus in the lab frame (relevant for astrophysical observations). The mean free path which represents the average distance a \gls{CR} particle can travel before undergoing a significant interaction depends on the initial energy, interaction crossection and the number density of target photons. For a UHE protons interacting with the CMB photon, the mean free path is about $\sim$50-100 Mpc. This leads to the outcome that if a \gls{UHE} proton with energy above the GZK cutoff travels over a distance larger than 50Mpc then such a proton will suffer catastrophic losses and will not be observed in the UHE regime. However, this consequence doesn't hold for heavy nuclei since for similar energies Photo-pion production is not the dominant process via which they can lose energy. For \glspl{UHECR} composed of heavy nuclei (e.g., iron, uranium), the dominant energy loss process during their propagation through the universe is photo-disintegration. It can be described as:
 \begin{equation}\label{eq:Pdisinteg}
   \begin{aligned}
     p + \gamma_{\text{CMB}} &\longrightarrow n + \pi^+ \\
     (A,Z) + \gamma_{\text{CMB}} &\longrightarrow (A-n, Z- n') + nN ,  
   \end{aligned} 
 \end{equation}
-with $n\,(n')$ being the number of stripped nucleons (protons). The mean free path for photo-disintegration for a photon field such as the CMB is similar to that of photo-pion production. Even though, the Pierre Auger Observatory observes a suppression in the \gls{CR} spectrum above the \gls{GZK} cutoff~\cite{KAMPERT2014318}, it does not claim it to be just due to GZK limit. It has also observed \glspl{CR} above the \gls*{GZK} cutoff. This issue along with its implications is discussed later in section~\ref{subsubsec:CRspectrum}. One of the other consequences arising from the interaction with the CMB is the interaction of high energy photons (gamma rays) to produce electron-positron pairs, $\gamma_{\text{UHECR}} + \gamma_{\text{CMB}} \longrightarrow e^+ + e^- $. This is an important consequence that alters both the expected \gls{UHECR} spectrum and the CR spectrum at Earth and also just leaves neutrinos as one of the few known UHE particles that can point back directly to their sources.
+with $n\,(n')$ being the number of stripped nucleons (protons). The mean free path for photo-disintegration for a photon field such as the CMB is similar to that of photo-pion production. Even though, the Pierre Auger Observatory observes a suppression in the \gls{CR} spectrum above the \gls{GZK} cutoff~\cite{KAMPERT2014318}, it does not claim it to be just due to GZK limit. It has also observed \glspl{CR} above the \gls*{GZK} cutoff. This issue along with its implications is discussed later in section~\ref{subsubsec:CRspectrum}. One of the other consequences arising from the interaction with the CMB is the interaction of ultra high energy photons (UHE$\gamma$s, E > $10^{16}$eV) to produce electron-positron pairs, $\gamma_{\text{UHE}} + \gamma_{\text{CMB}} \longrightarrow e^+ + e^- $. This is an important consequence that alters both the expected \gls{UHECR} spectrum and the CR spectrum at Earth and also just leaves neutrinos as one of the few known UHE particles that can point back directly to their sources over long distances.
 
-The production of these high energy neutrinos arising from the pions produced during the Photo-pion interaction or via the neutrons produced during photo-disintegration is discussed later in section~\ref{sec:UHENu} 
+The production of these high energy neutrinos arising from the pions produced during the Photo-pion interaction or via the neutrons produced during photo-disintegration is discussed later in section~\ref{sec:UHENu}. 
 
 \subsection{Latest results}
 \label{subsec:CRresults}
@@ -112,11 +112,11 @@ The study of \glspl{CR} to constrain their properties and the relevant sources r
 \end{figure}
 \subsubsection*{Cosmic Ray spectrum}
 \label{subsubsec:CRspectrum}
-The \gls{CR} spectrum measured by several experiments on Earth is summarized in figure.~\ref{fig:CR-spectrum}. Extending in energy from a few $\sim$100 MeV (solar \glspl{CR}) it spans about 12 orders of magnitude up to the most energetic observed \glspl{CR} $\sim 10^{20}$eV. The flux decreases with increasing energy and follows a varying power law description:
+The \gls{CR} spectrum measured by several experiments on Earth is summarized in Fig.~\ref{fig:CR-spectrum}. Extending in energy from a few 100 MeV (solar \glspl{CR}) it spans about 12 orders of magnitude up to the most energetic observed \glspl{CR} above $10^{20}$eV. The flux decreases with increasing energy and follows a varying power law description:
 
 \begin{equation}
   \label{eq:Powlaw}
-  \frac{dN}{dE} \propto E^{-\gamma}   
+  \frac{dN}{dE} \propto E^{-\gamma},   
 \end{equation}
 where $\gamma$ is the spectral index. The spectral index varies between 2.7 to 3.3 as measurements are made for higher energies. This signifies a decrease in the observed flux as the energy increases. The flux falls from $\mathrm{\sim 1m^{-2} s^{-1}}$ at $10^{11}$eV to $\mathrm{\sim 1m^{-2} yr^{-1}}$ at $10^{16}$eV to about $\mathrm{\sim 1km^{-2} yr^{-1}}$ at $10^{19}$eV. Such a steep fall also poses challenges for the experimental design and the corresponding size. This further affects the detection mechanisms employed to measure this spectrum, due to the very low flux expected at high energies, the measurements of the direct primaries become nearly impossible and an indirect detection using the property of the \gls{CR} to trigger an air shower in our atmosphere is employed. This phenomenon and how it is used to measure \glspl{CR} is discussed in the next chapter~\ref{chap:EAS}.
 
@@ -130,7 +130,7 @@ where $\gamma$ is the spectral index. The spectral index varies between 2.7 to 3
 % To better deduce the features in the \gls{CR} spectrum one can scale the flux in the fig~\ref{fig:CR-spectrum} by energy. The corresponding figure is shown in fig.~\ref{fig:CR-spectrum_scaled}. 
 Below $10^{13}$eV \glspl{CR} from the Sun dominate the spectrum. The galactic or extragalactic \glspl{CR} of these energies cannot enter our solar system because of a variety of reasons. These include a combination of the Heliosphere, Termination Shock and solar modulation which block the low energy \glspl{CR}. The Heliosphere which is a region influenced by the Sun's magnetic field and solar wind acts as a protective bubble around the solar system. Beyond the Heliosphere, the solar wind interacts with the ISM creating a region of termination shock which can cause scattering and deflection for incoming low energy \glspl{CR}. Additionally, the solar activity cycle can cause changes to the Heliosphere which in turn also affects the incoming \glspl{CR}. Beyond a few GeVs the Sun as a source of \glspl{CR} drops off due to reaching its maximum acceleration potential. Between $10^{13}$eV and $10^{18}$eV the spectrum is dominated by \glspl{CR} of galactic origin. This has been verified by comparing the spectral indices of the proposed acceleration mechanisms with the measured spectrum as mentioned before. A second proof also comes from the composition of the \glspl{CR} observed in these energies, but this is discussed later. \textit{Supernovae} and \textit{supernovae remnants} remain the most promising sources which could explain their origin. The spectral index, $\gamma \sim$ 2.7 gives a good description of this region. Around $\sim5 \times 10^{15}$ one observes a steepening of the spectrum known as the \textit{knee}. At this point $\gamma$ changes from 2.7 to 3.1. This is attributed to the galactic accelerators reaching their maximum potential for accelerating protons. Above the knee, the sources are expected to reach their maximum potential for other heavier particles until galactic sources cannot accelerate \glspl{CR} any further. This point is thought to be the origin of the second knee at $\sim 10^{17}$eV. At this point the $\gamma$ changes from 3.1 to 3.3. This is theorized to be a transition region in which the spectrum is believed to change from one of galactic origin to extragalactic origin. This region ends at about $\sim 10^{18}$eV whereon the spectrum hardens noticeably to a $\gamma \sim$ 2.6, originating what is referred to as the \textit{ankle}. Further, with increasing energy the spectrum again steepens to $\gamma \sim$ 5.1 reaching an eventual cutoff. The suppression of flux at these energies and the cutoff is still not properly understood yet and could be due to the following possibilities:
 
-1. \textbf{GZK Limit:} One of the most prevalent ideas behind the suppression and the cutoff is the GZK mechanism which was discussed above. Due to the observations of \glspl{CR} above the cutoff of $\sim 10^{19}$eV by the Pierre Auger Observatory and a non-observance of expected composition (non-proton primaries) and neutrino flux (GZK pion decay), GZK as the only reason for the observed cutoff in the spectrum is currently disfavoured. However, tensions between the composition measurements of the Pierre Auger Observatory and the \gls{TA}~\cite{kawai2008telescope}, the second-largest \gls*{CR} observatory, make this topic still a subject of debate.
+1. \textbf{GZK Limit:} One of the most prevalent ideas behind the suppression and the cutoff is the GZK mechanism which was discussed above. Due to the observations of \glspl{CR} above the cutoff of $\sim 10^{18.5}$eV by the Pierre Auger Observatory and a non-observance of expected composition (non-proton primaries) and neutrino flux (GZK pion decay), GZK as the only reason for the observed cutoff in the spectrum is currently disfavoured. However, tensions between the composition measurements of the Pierre Auger Observatory and the \gls{TA}~\cite{kawai2008telescope}, the second-largest \gls*{CR} observatory, make this topic still a subject of debate.
 
 2. \textbf{Maximum Rigidity:} In this scenario, the cutoff is due to the sources of the extragalactic \glspl{CR} reaching their maximum potential for acceleration for different particles i.e. maximum rigidity. Such a scenario is already observed in the spectrum for Galactic sources (\textit{knee}). An indirect proof of this mechanism can come from the observed composition from the \textit{ankle} region to the cutoff. If the composition shifts from lighter to heavier nuclei this would be proof of a cutoff at the potential extragalactic sources. 
 
@@ -189,7 +189,7 @@ Summary of the results of photon searches performed at the Pierre Auger Observat
 \section{Ultra High Energy Neutrinos}
 \label{sec:UHENu}
 \subsection{History}
-Neutrino ($\nu$)~\cite{10.1063/1.2995181} (neut-neutral, ino-small) is an elementary particle belonging to the fermion class with a 1/2 spin. It was named by Enrico Fermi but first postulated by Pauli in 1930 as an explanation for the conservation of energy, momentum and angular momentum in $\beta$ decays. It rarely reacts in nature and only scatters via weak interaction. The neutrino was first observed in 1956 by the Cowan-Reines neutrino experiment~\cite{PhysRev.92.830} by detecting the annihilation of neutrons and positrons produced by antineutrinos created in a nuclear reactor. Neutrinos can have three flavours electron neutrinos ($\nu_e$), muon neutrinos ($\nu_{\mu}$), or tau neutrinos ($\nu_{\tau}$) depending on the charged lepton (electron, muon or tau) accompanying them in their production. There are various mysteries involved with understanding this "ghost particle". One of these is the phenomenon of neutrino oscillations which is the intermixing of different neutrino flavors as they propagate through space. This has been observed in various experiments such as the Super-Kamiokande Observatory~\cite{Fukuda_1998} and the Sudbury Neutrino Observatories~\cite{BELLERIVE201630} and was the recipient of the 2015 Nobel Prize for Physics since it was the first indication that neutrinos have some mass. This has led to various efforts to determine the mass of the three neutrinos (under Neutrino Properties in~\cite{ParticleDataGroup:2024cfk}). Currently, only a hierarchical differentiation can be established~\cite{Qian_2015}, the configuration of which is also not completely understood, and further experiments like Karlsruhe Tritium Neutrino experiment~\cite{aker2024directneutrinomassmeasurementbased} are underway to solve this mystery. Also, the very mechanisms with which neutrinos can acquire mass are currently not completely understood~\cite{CERN_courier_nu_mass}. 
+Neutrino ($\nu$)~\cite{10.1063/1.2995181} (neut-neutral, ino-small) is an elementary particle belonging to the fermion class with a 1/2 spin. It was named by Enrico Fermi but first postulated by Pauli in 1930 as an explanation for the conservation of energy, momentum and angular momentum in $\beta$ decays. It rarely reacts in nature and only scatters via weak interaction. The neutrino was first observed in 1956 by the Cowan-Reines neutrino experiment~\cite{PhysRev.92.830} by detecting the positron annihilation of neutrons and positrons produced by antineutrinos created in a nuclear reactor. Neutrinos can have three flavours electron neutrinos ($\nu_e$), muon neutrinos ($\nu_{\mu}$), or tau neutrinos ($\nu_{\tau}$) depending on the charged lepton (electron, muon or tau) accompanying them in their production. There are various mysteries involved with understanding this "ghost particle". One of these is the phenomenon of neutrino oscillations which is the intermixing of different neutrino flavors as they propagate through space. This has been observed in various experiments such as the Super-Kamiokande Observatory~\cite{Fukuda_1998} and the Sudbury Neutrino Observatories~\cite{BELLERIVE201630} and was the recipient of the 2015 Nobel Prize for Physics since it was the first indication that neutrinos have some mass. This has led to various efforts to determine the mass of the three neutrinos (under Neutrino Properties in~\cite{ParticleDataGroup:2024cfk}). Currently, only a hierarchical differentiation can be established~\cite{Qian_2015}, the configuration of which is also not completely understood, and further experiments like Karlsruhe Tritium Neutrino experiment~\cite{aker2024directneutrinomassmeasurementbased} are underway to solve this mystery. Also, the very mechanisms with which neutrinos can acquire mass are currently not completely understood~\cite{CERN_courier_nu_mass}. 
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Neutrino spectra.jpg}
