--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -179,7 +179,7 @@ Photons again offer another window to look into the origin, propagation and sour
 \begin{figure}[t!]
   \centering
   \includegraphics[width=14.5cm]{thesis_figures/CRnNu/Photon-limits.png}
-  \caption{Summary of the current upper limits on the integral photon flux determined by Pierre Auger observatory and other experiments~\cite{PierreAuger:2024ayl}}
+  \caption{Summary of the current upper limits on the integral photon flux determined by Pierre Auger Observatory and other experiments~\cite{PierreAuger:2024ayl}}
   \label{fig:Auger-Photon-limits}
 \end{figure}
 
