Some more cosmetic changes

--- a/thesis_skel/thesis_CRnNu.tex
+++ b/thesis_skel/thesis_CRnNu.tex
@@ -203,8 +203,6 @@ Neutrinos can help to understand various astrophysical processes such as the Big
 \subsection{Origin and Propagation}
 \label{subsec:nuorig}
 UHE$\nu$s can be broadly classified into three categories based on their origin. These are astrophysical, originating from known/hypothesized astrophysical sources, cosmogenic, originating from the interactions of \glspl{UHECR} with the \gls{CMB} or the \gls{EBL} and exotic, emerging from processes such as the Big Bang, dark matter annihilation etc. The reactions for the mentioned processes are as follows:
-
-
 \subsubsection*{Astrophysical Neutrinos}
 \label{subsubsec:AstroNu}
 
@@ -244,8 +242,7 @@ where $U_{\alpha i}$ is the mixing matrix formulated by Pontecorvo-Maki-Nakagawa
 Another important aspect to fully understand the origin and propagation of astrophysical neutrinos is determining their expected energies. On average the energy fraction that pions can get from the \gls*{CR} nucleons is about 20\%. These relativistic pions can then further pass on between $\sim$20-26\% depending on the flavor and type of the neutrino. Approximately, the Energy fraction for the produced neutrinos concerning the gamma and Nucleon is~\cite{Lipari_2007}:
 \begin{equation}
   \left\langle E_{\nu} \right\rangle  \simeq  \frac{1}{2}\left\langle E_{\gamma} \right\rangle \simeq  \frac{1}{20}\left\langle E_{N} \right\rangle
-  \end{equation}
-
+\end{equation}
 Depending on the type of source and how far the said source is one can calculate the maximum energy potential for sources. With the measurement of the diffused astrophysical flux~\cite{PhysRevD.110.022001} by IceCube up to $10^{16}$eV, these calculations can be directly constrained by measurement~\cite{Abbasi_2023_supernova_emission}. Since extragalactic sources can produce \glspl{UHECR} up to $\sim 10^{20}$eV which is corroborated by measurements of the Pierre Auger Observatory one can calculate an upper limit to the diffuse flux for neutrinos. Some of these calculations can be found in ~\cite{Condorelli_2023_starburst} for Starburst galaxies~\cite{Murase_2023}, for AGNs and ~\cite{2003ApJ...595..346Z} for Magnetars. The non-detection of UHE$\nu$s at Auger can thus also act as an important tool to constrain the production mechanisms hypothesized for these sources. The potential of this is discussed later in section~\ref{subsec:Nuresults}.   
 
 \subsubsection*{Cosmogenic Neutrinos}
@@ -262,14 +259,10 @@ Cosmogenic neutrinos are produced either as a consequence of the \gls{GZK} mecha
 Since the processes are the same, the flavor flux expectations at Earth remain the same. However, the expected energies that the cosmogenic neutrinos can acquire differ drastically as compared to astrophysical neutrinos. The energy of neutrinos produced due to interactions with \gls*{CMB} in the case of photo-pion production is of the order of $10^{18}$eV while for the ones produced via the by-products (pions or neutrons) of photo-disintegration, it is of the order of $10^{16}$eV~\cite{Aloisio_2015}. In the case of interactions with \gls*{EBL}, this lowers to about $10^{15}$eV and $10^{14}$eV for the two types of interactions. 
 The exact properties of the neutrinos produced are directly dependent on the parent \glspl*{UHECR} that produce them. The properties of \glspl{UHECR} such as the total flux, composition, maximum energies, production spectrum at the sources and their cosmological evolution (adiabatic losses) are all crucial factors that affect the  secondary cosmogenic neutrinos produced by these \glspl*{UHECR}. A collection of some examples of the expected cosmogenic neutrino fluxes for different scenarios can be found in ~\cite{KAMPERT2012660,AlvesBatista:2018zui,Heinze:2019jou}. One example are shown in Fig.~\ref{fig:model_nu_auger_mixed}. The two distinct humps are due to the two associated production processes with the lower one being due to the neutrinos produced in beta decay of neutrons and nuclei produced by photo-disintegration. 
 
-Measurements of \gls*{CR} detection observatories such as the Pierre Auger Observatory can also be used to calculate an expected neutrino spectrum based on assumptions on the composition and the cosmological evolution of the sources. Neutrinos thus can act as a very important tool in constraining the composition of the incoming \glspl*{UHECR} and furthering their actual sources. They can also help to solve the question of the cutoff observed in the \gls*{UHECR} spectrum whether this is due to the \gls*{GZK} mechanism (proton-dominated composition) or sources reaching their maximum potential as theorized by Hillas (mixed composition). The current results regarding this important study are discussed in section~\ref{subsec:Nuresults}
-
-
+Measurements of \gls*{CR} detection observatories such as the Pierre Auger Observatory can also be used to calculate an expected neutrino spectrum based on assumptions on the composition and the cosmological evolution of the sources. Neutrinos thus can act as a very important tool in constraining the composition of the incoming \glspl*{UHECR} and furthering their actual sources. They can also help to solve the question of the cutoff observed in the \gls*{UHECR} spectrum whether this is due to the \gls*{GZK} mechanism (proton-dominated composition) or sources reaching their maximum potential as theorized by Hillas (mixed composition). The current results regarding this important study are discussed in section~\ref{subsec:Nuresults}.
 \subsubsection*{Exotic Neutrinos}
 \label{subsubsec:ExoticNu}
-
 Neutrinos can also be produced as a result of self-annihilation or decay of dark matter particles. In dark matter annihilation scenarios, two dark matter particles come together and annihilate, leading to the production of standard model particles as a result. The specific flux of the neutrino depends on the properties of the dark matter particle. One such candidate for such a process could be a \gls{WIMP}, which is its own antiparticle (a Majorana fermion). In regions with a high concentration of dark matter, such as the centres of galaxies or galaxy clusters, \glspl{WIMP} can come together and annihilate into standard model particles~\cite{10.1111/j.1365-2966.2008.13366.x}. One of the annihilation channels of interest for producing very high-energy neutrinos is the annihilation into pairs of intermediate bosons, such as $W^+W^-$ (W-boson pair), or $Z^0 - Z^0$ (Z-boson pair). These intermediate bosons can subsequently decay into quarks, leptons, and other particles, including neutrinos. The final state neutrinos can be very high-energy, potentially reaching energies in the peta-electronvolt (PeV) range and beyond. For dark matter decay, a stable dark matter particle is supposed to spontaneously transform to other standard model particles including neutrinos~\cite{PhysRevD.108.123021}. 
-
 
 \subsection{Neutrino Interactions and Detection}
 \label{subsec:Nuintdet}
@@ -293,7 +286,6 @@ Antineutrinos can also interact with atomic electrons leading to a $W^-$ boson p
 \end{equation}
 
 Therefore, to detect a neutrino at this energy range in a year requires a detector with a minimum size of 1km$^3$. The type of such large volume detectors for UHE$\nu$s depends on the particular techniques used to detect the products of neutrino interaction with nucleon. 
-
 
 The charged lepton can produce detectable signals via ionization, Cherenkov radiation or scintillation. Moreover, the lepton and hadrons can also trigger EASs which can be detected. Both the lepton and the hadron can lead to a cascade. Depending on the flavor of the neutrino the interaction also leads to unique signals. The electron produced in the CC interaction of $\nu_e$ produces electromagnetic cascades in the propagation medium while a muon rarely produces a cascade like signature only undergoing radiation losses. In contrast, a tau lepton produced from $\nu_{\tau}$ can propagate without interaction for a certain distance and then lead to a cascade. For NC reactions the leptonic cascade is missing and only a hadronic cascade can be observed. Low-energy neutrinos or neutrinos produced in the atmosphere can also lead to similar cascades and act as background for high-energy neutrino searches. Depending on the location and techniques employed such background is dealt with in different ways. Some examples of different detectors based on the medium and the methodology employed for detection are as follows:
 
