--- a/thesis_skel/thesis_DGH.tex
+++ b/thesis_skel/thesis_DGH.tex
@@ -112,7 +112,7 @@ Table~\ref{tab:systematic_uncertainties} summarizes the  source of systematic un
   \caption{Systematic uncertainties and their contribution to the exposure}
   \label{tab:systematic_uncertainties}
 \end{table}
-
+\clearpage
 \begin{figure}[ht!]
   \centering
   \includegraphics[width=0.95\textwidth]{thesis_figures/Nu_analysis/Fisher_plots/Fisher_comp_bkg_test_flawed_wnt.pdf}
@@ -204,7 +204,7 @@ After the errors discovered in the initial partial unblinding were fixed by alte
 
 \end{figure}
 \FloatBarrier
-\begin{table}[h!]
+\begin{table}[ht!]
   \centering
   \small
   \begin{tabular}{ |P{1.25cm}||P{2.23cm}|P{2.23cm}|P{2.23cm}|P{2.23cm}|P{2.28cm}|  }
@@ -226,7 +226,6 @@ After the errors discovered in the initial partial unblinding were fixed by alte
   \caption{Evaluation of the exponential fit on the $\mathcal{F} $ distributions for test+search samples. The observed and predicted (from the fit) number of events in the tail of the Fisher distribution are shown for each angular sub-region. The numbers are calculated by integrating from the start point mentioned in the first row till the +1$\sigma$.}
   \label{tab:Cut_eval_unblind}
 \end{table}
-
 \section{Diffuse limit for the UHE neutrino flux}
 \label{sec:diff_limit}
 Since no neutrino candidate was found in this analysis, an upper limit to the flux of the incoming UHE$\nu$s can be estimated. Let flux per unit area, \textit{A}, energy, solid angle $\Omega$ and time be denoted by $\phi(E_{\nu}) = \frac{d^6 N_{\nu}}{dE_{\nu}\,d\Omega\, dA \, dt}$. The expected number of detected neutrinos can be calculated by folding in the total exposure $\xi_{tot}(E_{\nu})$ with flux as follows,
