--- a/thesis_skel/thesis_DGL.tex
+++ b/thesis_skel/thesis_DGL.tex
@@ -333,7 +333,7 @@ The overall summary of the reconstructed events for both the sample for all ener
   \label{fig:Events_vs_angle_summary}
 \end{figure}
 
-
+\clearpage
 \section{\texorpdfstring{$\nu$}{} selection}
 \label{sec:nu_sel}
 This section describes the decisions made to select $\nu$ induced air showers. The selection is optimized and evaluated on the above-mentioned neutrino simulations and a part of the measured data which is used as an estimate for the expected background. Since a \textit{blind search} strategy is envisioned for the search. The rest of the measured data forms the \textit{search sample} and will be used to look for neutrino like events during the \textit{unblinding}. 
